--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>hello world</p>
-<a herf="https://www.google.com"><button>google</button></a>
+<a href="https://www.google.com"><button>google</button></a>
