--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>hello world</p>
-<button><a href="https://www.google.com">google</a></button><a href="https://www.google.com">google</a>
+<button><a href="https://www.google.com">google</a></button>
