--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<!DOCKTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
 <p>hello world</p>
 <button><a href="https://www.google.com">google</a></button>
+</html>
