--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
+<title>Seojin's homepage</title>
 </head>
-<p>hello world</p>
-<button><a href="https://www.google.com">google</a></button>
+<body>
+<div class="layout" width="20%">
+
+</div>
+</body>
 </html>
