--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Seojin's homepage</title>
 </head>
 <body>
-<div style="margin: auto; width: 850px">
+<div style="margin: auto; width: 850px; text-align: center">
 <div class="layout" style="width: 200px; height: 200px">
 NAVBAR
 </div>
