--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
 <title>Seojin's homepage</title>
 </head>
 <body>
+
 <div style="margin: auto; width: 850px; text-align: center">
+
 <div class="layout" style="width: 200px; height: 200px">
 NAVBAR
 </div>
+
 <div class="layout" style="width: 400px; height: 200px">
 HEADER
 </div>
+
 <div class="layout" style="width: 400px; height: 800px">
-MAIN
+<div>
+
 </div>
+</div>
+
 <div class="layout" style="width: 200px; height: 800px">
 INFORMATION
 </div>
+
 <div class="layout" style="width: 610px; height: 100px">
 FOOTER
 </div>
+
 </div>
 </body>
 </html>
