--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ HEADER
 
 <div class="layout" style="width: 400px; height: 800px">
 <div>
-
 </div>
 </div>
 
@@ -27,7 +26,7 @@ INFORMATION
 </div>
 
 <div class="layout" style="width: 610px; height: 100px">
-FOOTER
+POWERED BY GITHUB • FONT BY GOOGLE
 </div>
 
 </div>
