--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ HEADER
 INFORMATION
 </div>
 
-<div class="layout" style="width: 610px; height: 100px">
+<div class="layout" style="width: 610px; height: 30px; text-color: Grey">
 POWERED BY GITHUB • FONT BY GOOGLE
 </div>
 
