--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ HEADER
 INFORMATION
 </div>
 
-<div class="layout" style="width: 610px; height: 30px; color: #b3b3b3">
-POWERED BY GITHUB • FONT BY GOOGLE
+<div class="layout" style="width: 610px; height: 30px;>
+<p style="color: #b3b3b3; height: 30px">POWERED BY GITHUB • FONT BY GOOGLE</p>
 </div>
 
 </div>
