--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ INFORMATION
 </div>
 
 <div class="layout" style="width: 610px; height: 30px;>
-<p style="color: #b3b3b3; height: 30px">POWERED BY GITHUB • FONT BY GOOGLE</p>
+<p style="color: #666; height: 30px">POWERED BY GITHUB • FONT BY GOOGLE</p>
 </div>
 
 </div>
