--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="j.">
 <title>Seojin's homepage</title>
 </head>
 <body>
