--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" type="image/x-icon" href="j.">
+<link rel="icon" type="image/x-icon" href="j.png">
 <title>Seojin's homepage</title>
 </head>
 <body>
