--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
-<!DOCKTYPE html>
+<!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
-<link rel="icon" type="image/x-icon" href="j.png">
-<title>Seojin's homepage</title>
+    <title>Seojin's homepage</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Short Stack">
+    <link rel="icon" type="image/x-icon" href="j.png">
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js"></script>
 </head>
 <body>
+    <h1 onclick="getid(this, 'dr')">Welcome to my homepage!</h1>
+    <p>The seojinest place in the world</p>
+    <nav>
+        <a href='https://blog.naver.com/dotori_36'><button>Blog</button></a>
+        <a href='game.html'><button>Games</button></a>
+    </nav>
+    <br>
+    <img class="full" src="a.png">
 
-<div style="margin: auto; width: 820px; text-align: center">
+    <a href='https://blog.naver.com/dotori_36'>
+        <h2>Come visit my blog</h2>
+        <img src="dr.png" width="200">
+    </a>
 
-<div class="layout" style="width: 200px; height: 200px">
-NAVBAR
-</div>
+    <a href='game.html'>
+        <h2>Play my fun games!</h2>
+        <img src="game.png" width="200">
+    </a>
 
-<div class="layout" style="width: 400px; height: 200px">
-HEADER
-</div>
+    <a href='madlib.html'>
+        <h2>Play my madlibs!</h2>
+        <img src="madlib.png" width="200">
+    </a>
 
-<div class="layout" style="width: 400px; height: 800px">
-<div>
-</div>
-</div>
+    <a href='taxcal.html'>
+        <h2>Caculate tax!</h2>
+        <img src="k.png" width="200">
+    </a>
 
-<div class="layout" style="width: 200px; height: 800px">
-INFORMATION
-</div>
-
-<div class="layout" style="width: 610px; height: 30px;>
-<p style="color: #666666; height: 30px">POWERED BY GITHUB • FONT BY GOOGLE</p>
-</div>
-
-</div>
-</body>
 </html>
