--- a/taxcal.html
+++ b/taxcal.html
@@ -3,9 +3,11 @@
     <head>
     <title>Seojin's homepage - Tax calculator</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jua">
     <link rel="icon" type="image/x-icon" href="j.png">
     <link rel="stylesheet" href="styles.css">
     <script src="taxcal.js"></script>
+    <style>body {font-family: "Jua";} text {font-size: 1.2em;} </style>
     </head>
     <body>
         <div style="display:block;"
