--- a/taxcal.html
+++ b/taxcal.html
@@ -19,5 +19,6 @@
         <p>월세(부동산):  <input type="text" id="estate"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
         <div>
+        <div id="list"></div>
     </body>
 </html>
