--- a/taxcal.html
+++ b/taxcal.html
@@ -16,9 +16,13 @@
         <p>번호:  <input type="text" id="number"></p>
         <p>이름:  <input type="text" id="namek"></p>
         <p>월급:  <input type="text" id="salary"></p>
-        <p>월세(부동산):  <input type="text" id="estate"></p>
+        <p>자릿세(부동산):  <input type="text" id="estate"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
         <div>
+        <h3><b>HAN세금 계산기는 무엇인가요?</b></h3>
+        <p>HAN세금 계산기는 통계청들의 수고를 덜어 주고 이미 꿀인 통계청을 더 꿀직업으로 만들어 줍니다.</p>
+        <br>
+        <h3><b></b></h3>
         <div id="list"></div>
     </body>
 </html>
