--- a/taxcal.html
+++ b/taxcal.html
@@ -10,8 +10,8 @@
     <style>body {font-family: "Jua";} text {font-size: 1.2em;} </style>
     </head>
     <body>
-        <div style="display:block;"
-        <h1>HAN세금 계산기 2.0</h1>
+        <div style="display:block;">
+        <h5>HAN세금 계산기 2.0</h5>
         <p>HAN국의 세금을 계산하세요!</p>
         <p>번호:  <input type="text" id="number"></p>
         <p>이름:  <input type="text" id="namek"></p>
@@ -22,7 +22,8 @@
         <h3><b>HAN세금 계산기는 무엇인가요?</b></h3>
         <p>HAN세금 계산기는 통계청들의 수고를 덜어 주고 이미 꿀인 통계청을 더 꿀직업으로 만들어 줍니다.</p>
         <br>
-        <h3><b></b></h3>
+        <h3>Q. 번호와 이름 란을 곡 넣어야 하나요?</h3>
+        <p><b>A. 아니요.</b> 번호와 이름 란은 여러 개의 세금을 계산했을 때 </p>
         <div id="list"></div>
     </body>
 </html>
