--- a/taxcal.html
+++ b/taxcal.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div style="display:block;">
-        <h5>HAN세금 계산기 2.0</h5>
+        <h4>HAN세금 계산기 2.0</h4>
         <p>HAN국의 세금을 계산하세요!</p>
         <p>번호:  <input type="text" id="number"></p>
         <p>이름:  <input type="text" id="namek"></p>
@@ -19,11 +19,11 @@
         <p>자릿세(부동산):  <input type="text" id="estate"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
         <div>
-        <h3><b>HAN세금 계산기는 무엇인가요?</b></h3>
+        <h5><b>HAN세금 계산기는 무엇인가요?</b></h5>
         <p>HAN세금 계산기는 통계청들의 수고를 덜어 주고 이미 꿀인 통계청을 더 꿀직업으로 만들어 줍니다.</p>
         <br>
-        <h3>Q. 번호와 이름 란을 곡 넣어야 하나요?</h3>
-        <p><b>A. 아니요.</b> 번호와 이름 란은 여러 개의 세금을 계산했을 때 </p>
+        <h6>Q. 번호와 이름 란을 곡 넣어야 하나요?</h6>
+        <p><b>A. 아니요.</b> 번호와 이름 란은 여러 개의 세금을 계산했을 때 헸갈림을 방지하기 위해 있는 란입니다. 번호 란을 작성하지 않으실 경우 출력에 '번' 이라는 글자가 붙어있을 수 있으나 프로그램에 의한 지극히 정상적인 현상이므로 걱정하지 않으셔도 됩니다.</p>
         <div id="list"></div>
     </body>
 </html>
