--- a/taxcal.html
+++ b/taxcal.html
@@ -13,8 +13,8 @@
         <div style="display:block;">
         <h6>HAN세금 계산기 3.0</h6>
         <p>HAN국의 세금을 계산하세요!</p>
-        <p>번호:  <input type="number" id="number"></p>
-        <p>이름:  <input type="text" id="namek"></p>
+        <p>번호:  <input type="number" id="number" min="1" max="26"></p>
+        <p>이름:  <input type="text" id="name"></p>
         <p>월급:  <input type="number" id="salary"></p>
         <p>자릿세(부동산):  <input type="number" id="estate"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
