--- a/taxcal.html
+++ b/taxcal.html
@@ -14,15 +14,15 @@
         <h6>HAN세금 계산기 3.0</h6>
         <p>HAN국의 세금을 계산하세요!</p>
         <p>번호:  <input type="number" id="number" min="1" max="26"></p>
-        <p>이름:  <input type="text" id="name"></p>
-        <p>월급:  <input type="number" id="salary"></p>
-        <p>자릿세(부동산):  <input type="number" id="estate"></p>
+        <p>이름:  <input type="text" id="name" ></p>
+        <p>월급:  <input type="number" id="salary" min="180" max="210"></p>
+        <p>자릿세(부동산):  <input type="number" id="estate" min="0" max="100"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
         <div>
 
         <div id="list"></div>
 
-        <div style="width: 40%;">
+        <div style="width: 40%; margin: auto; text-align: left;">
         <h6><b>HAN세금 계산기는 무엇인가요?</b></h6>
         <p>HAN세금 계산기는 통계청들의 수고를 덜어 주고 이미 꿀인 통계청을 더 꿀직업으로 만들어 줍니다.</p><br>
             
@@ -34,6 +34,9 @@
 
         <p style="font-size: 1.5em;">Q. 근데 저를 비롯한 모든 사람이 자릿세를 냈는데요.</p>
         <p><b>A. 그렇겠죠.</b>원래 HAN세금 계산기는 자릿세를 다로 내지 않던 때에 제작되었습니다. 그러나 지금은 자릿세를 따로 내므로, 자릿세 란에는 그냥 0을 넣어 주시면 됩니다.</p><br>
+
+        <p size="1.5em">Q. </p>
+        <p><b>A. </b></p><br>
         
     </body>
 </html>
