--- a/taxcal.html
+++ b/taxcal.html
@@ -10,13 +10,13 @@
     <style>body {font-family: "Jua";} text {font-size: 1.2em;} </style>
     </head>
     <body>
-        <div style="display:block;">
-        <h6>HAN세금 계산기 3.0</h6>
+        <div>
+        <h6 style="border-style; solid;">HAN세금 계산기 3.0</h6>
         <p>HAN국의 세금을 계산하세요!</p>
-        <p>번호:  <input type="number" id="number" min="1" max="26"></p>
-        <p>이름:  <input type="text" id="name" ></p>
-        <p>월급:  <input type="number" id="salary" min="180" max="210"></p>
-        <p>자릿세(부동산):  <input type="number" id="estate" min="0" max="100"></p>
+        <p>번호:  <input type="number" id="number" min="1" max="26" size="20"></p>
+        <p>이름:  <input type="text" id="name" size="20"></p>
+        <p>월급:  <input type="number" id="salary" min="180" max="210" size="20"></p>
+        <p>자릿세(부동산):  <input type="number" id="estate" min="0" max="100" size="20"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
         <div>
 
