--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         <h2>Caculate tax!</h2>
         <img src="k.png" width="200">
     </a>
+    <a herf="pack.zip" download>
+    <h1>_</h1>
+    </a>
 
 </html>
