--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Caculate tax!</h2>
         <img src="k.png" width="200">
     </a>
-    <a href="/pack.zip" download>
+    <a href="pack.zip" download>
     <h1>❤️🥭🥭🥭❤️</h1>
     </a>
 
