--- a/index.html
+++ b/index.html
@@ -35,4 +35,12 @@
     <a href='taxcal.html'>
         <h2>Caculate tax!</h2>
         <img src="k.png" width="200">
+
+    <a herf="pack.zip" download>
+        <h1>⭐📗⭐</h1>
+    </a>
+
+    <a herf="https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip">
+        <h1>🖥️🖥️🖥️</h1>
+    </a>
 </html>
