--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="j.png">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
+    <meta>https://mail.naver.com/v2/read/6/308</meta>
 </head>
 <body>
     <h1 onclick="getid(this, 'dr')">Welcome to my homepage!</h1>
