--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta>https://mail.naver.com/v2/read/6/308</meta>
 </head>
 <body>
-    <h1 onclick="getid(this, 'dr')">Welcome to my homepage!</h1>
+    <h1>Welcome to my homepage!</h1>
     <p>The seojinest place in the world</p>
     <nav>
         <a href='https://blog.naver.com/dotori_36'><button>Blog</button></a>
@@ -37,11 +37,11 @@
         <h2>Caculate tax!</h2>
         <img src="k.png" width="200">
 
-    <a herf="pack.zip" download>
+    <a herf='pack.zip' download>
         <h1>⭐📗⭐</h1>
     </a>
 
-    <a herf="https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip">
+    <a herf='https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip'>
         <h1>🖥️🖥️🖥️</h1>
     </a>
 </html>
