--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <img src="k.png" width="200">
 
     <a herf='pack.zip' download>
-        <h1>⭐📗⭐</h1>
+        <h1>⭐📗⭐AAA</h1>
     </a>
 
     <a herf='https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip'>
-        <h1>🖥️🖥️🖥️</h1>
+        <h1>🖥️🖥️🖥️AAA</h1>
     </a>
 </html>
