--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <h2>AAA</h2>
     </a>
 
-    <a herf='https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip'>
-        <h2>AAAM</h2>
+    <a href='https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip'>
+        <h2>Caculate!</h2>
+        <img src="k.png" width="200">
     </a>
 </html>
