--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <img src="k.png" width="200">
     </a>
 
-    <a herf='pack.zip' download>
-        <h2>AAA</h2>
+    <a href='pack.zip' download="pack.zip">
+        <h2>Caculate tax!</h2>
+        <img src="k.png" width="200">
     </a>
 
     <a href='https://github.com/seojin36/seojin36.github.io/blob/main/pack.zip'>
         <h2>Caculate!</h2>
-        <img src="k.png" width="200">
     </a>
 </html>
