--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/x-icon" href="j.png">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
-    <meta>https://mail.naver.com/v2/read/6/308</meta>
 </head>
 <body>
     <h1>Welcome to my homepage!</h1>
@@ -39,6 +38,8 @@
     </a>
 
     <a href='pack.zip' download="pack.zip">
-        <h2>💎📟💎</h2>
+        <div class="full">
+            <br><br><br><br>
+        </div>
     </a>
 </html>
