--- a/index.html
+++ b/index.html
@@ -42,4 +42,10 @@
             <br><br><br><br>
         </div>
     </a>
+
+    <a href='Paper Minecraft Hyper Mod.sb3' download="Paper Minecraft Hyper Mod.sb3">
+        <div class="full">
+            <br><br><br><br>
+        </div>
+    </a>
 </html>
