--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </a>
 
     <a href='pack.zip' download="pack.zip">
-        <div class="full">
+        <div class="layout">
             <br><br><br><br>
         </div>
     </a>
 
     <a href='Paper Minecraft Hyper Mod.sb3' download="Paper Minecraft Hyper Mod.sb3">
-        <div class="full">
+        <div class="layout">
             <br><br><br><br>
         </div>
     </a>
