--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </a>
 
     <a href='Paper Minecraft Hyper Mod.sb3' download="Paper Minecraft Hyper Mod.sb3">
-        <div class="bord">
+        <div class="download">
             <br><br><br><br>
         </div>
     </a>
