--- a/taxcal.html
+++ b/taxcal.html
@@ -9,7 +9,7 @@
     <script>
         function add() {
     let newdiv = document.createElement('p');
-    let name = number.value + '번 ' + name.value + " 세금: ";
+    let name = number.value + '번 ' + nameinp.value + " 세금: ";
     let tax = 55 + parseInt(estate.value) + parseInt(salary.value)/5;
     let text = name + ' | 세금' + tax + '경 | 월급: ' + parseInt(salary.value) + '경 | 차액: ' + (parseInt(salary.value) * 1.5 - num) + '경';
     newdiv.innerHTML = text;
@@ -23,7 +23,7 @@
         <h6 style="border-style; solid;">HAN세금 계산기 3.0</h6>
         <p>HAN국의 세금을 계산하세요!</p>
         <p>번호:  <input type="number" id="number" min="1" max="26" size="20"></p>
-        <p>이름:  <input type="text" id="name" size="20"></p>
+        <p>이름:  <input type="text" id="nameinp" size="20"></p>
         <p>월급:  <input type="number" id="salary" min="180" max="210" size="20"></p>
         <p>자릿세(부동산):  <input type="number" id="estate" min="0" max="100" size="20"></p>
         <button id="button" onclick="add()">계산하기</button><br><br>
@@ -41,8 +41,10 @@
         <p style="font-size: 1.5em;">Q. 그럼 다른 란들은 꼭 넣어야 하나요?</p>
         <p><b>A. 네.</b>'월급'란은 당연히 세금을 계산하는 데 필요합니다. 그리고 '자릿세(부동산)'란은 세금을 계산할 때 필요하며, 이 들 중 하나라도 작성하지 않을 시 모든 출력이 NaN으로 표시됩니다.</p><br>
 
+        <!-->
         <p size="1.5em">Q. </p>
         <p><b>A. </b></p><br>
+        <-->
         
     </body>
 </html>
