--- a/taxcal.html
+++ b/taxcal.html
@@ -12,8 +12,10 @@
     let name = number.value + '번 ' + nameinp.value + " 세금: ";
     let tax = 55 + parseInt(estate.value) + parseInt(salary.value)/5;
     let text = name + ' | 세금' + tax + '경 | 월급: ' + parseInt(salary.value) + '경 | 차액: ' + (parseInt(salary.value) * 1.5 - num) + '경';
-    newdiv.innerHTML = text;
-    document.getElementById("list").appendChild(newdiv);
+    const node = document.createTextNode(text);
+    newdiv.appendChild(node);
+    const element = document.getElementById("list");
+    element.appendChild(newdiv);
 }
     </script>
     <style>body {font-family: "Jua";} text {font-size: 1.2em;} </style>
