--- a/taxcal.html
+++ b/taxcal.html
@@ -10,13 +10,16 @@
     function get(id) {
         const elem = document.getElementById(id);
         return elem.value ? elem.value : 0;
-    }  
+    } 
+    function getint(id) {
+        return parseInt(get(id))
+    }
     function add() {
     let newdiv = document.createElement('p');
     let name = get("number") + '번 ' + get("nameinp") + " 세금: ";
-    let tax = 55 + parseInt(get("estate")) + parseInt(get("salary")) / 10;
-    let text = name + ' | 세금 ' + tax + '경 | 월급: ' + parseInt(get("salary")) 
-               + '경 | 차액: ' + (parseInt(get("salary") * 1.5) - tax) + '경';
+    let tax = 55 + getint("estate") + getint("salary") / (10 + ((getint("twejic") / 500) * getint("salary"));
+    let sal = getint("salary") + ((getint("twejic") / 100) * getint("salary"))
+    let text = name + ' | 세금 ' + tax + '경 | 월급: ' + getint("salary") + '경 | 차액: ' + sal - tax) + '경';
     const node = document.createTextNode(text);
     newdiv.appendChild(node);
     const element = document.getElementById("list");
@@ -47,7 +50,7 @@
         <p><b>A. 아니요.</b> 번호와 이름 란은 여러 개의 세금을 계산했을 때 헸갈림을 방지하기 위해 있는 란입니다. 번호 란을 작성하지 않으실 경우 출력에 '번' 이라는 글자가 붙어있을 수 있으나 프로그램에 의한 지극히 정상적인 현상이므로 걱정하지 않으셔도 됩니다.</p><br>
 
         <p style="font-size: 1.5em;">Q. 그럼 다른 란들은 꼭 넣어야 하나요?</p>
-        <p><b>A. 네.</b>'월급'란은 당연히 세금을 계산하는 데 필요합니다. 그리고 '자릿세(부동산)'란은 세금을 계산할 때 필요하며, 이 들 중 하나라도 작성하지 않을 시 모든 출력이 NaN으로 표시됩니다.</p><br>
+        <p><b>A. 네.</b>'월급'란은 당연히 세금을 계산하는 데 필요합니다. 그리고 '자릿세(부동산)'란은 세금을 계산할 때 필요하며, 이 들 중 하나라도 작성하지 않을 시 해당 출력이 0으로 표시됩니다.</p><br>
 
         <!--
         <p size="1.5em">Q. </p>
