--- a/taxcal.html
+++ b/taxcal.html
@@ -31,7 +31,7 @@
                 let remaining = sal - tax;
 
                 // Prepare output text
-                let text = name + ' | 세금: ' + tax.toFixed(2) + '경 | 월급: ' + salary + '경 | 차액: ' + remaining.toFixed(2) + '경';
+                let text = name + ' | 세금: ' + tax + '경 | 월급: ' + salary + '경 | 차액: ' + remaining + '경';
                 
                 const node = document.createTextNode(text);
                 newdiv.appendChild(node);
