--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </a>
 
-    <a href='Paper Minecraft Hyper Mod (7).sb3' download="Paper Minecraft Hyper Mod.sb3">
+    <a href='Paper Minecraft Troll Mod (5).sb3' download="Paper Minecraft Troll Mod.sb3">
         <div class="download">
             <br><br><br><br>
         </div>
